# data-engineering-zoomcamp-project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
dags/: __init__.py
dags/assets/: .env.example  assets.py
terraform/: main.tf  variable.tf
tmpb8m0lmd8/history/: runs.db
tmpb8m0lmd8/history/runs/: index.db
tmpb8m0lmd8/schedules/: schedules.db
tmpdgq9mwah/history/: runs.db
tmpdgq9mwah/history/runs/: index.db
tmpdgq9mwah/schedules/: schedules.db
tmpgwc1ydtj/history/: runs.db
tmpgwc1ydtj/history/runs/: index.db
tmpgwc1ydtj/schedules/: schedules.db
tmphlxo7yxa/history/: runs.db
tmphlxo7yxa/history/runs/: index.db
tmphlxo7yxa/schedules/: schedules.db
tmpi3ymz72b/history/: runs.db
tmpi3ymz72b/history/runs/: index.db
tmpi3ymz72b/schedules/: schedules.db
tmpstf_o_4e/history/: runs.db
tmpstf_o_4e/history/runs/: index.db
tmpstf_o_4e/schedules/: schedules.db
